docs/pages/versions/v56.0.0/sdk/ui/swift-ui/spacer.mdx
---
modificationDate: May 19, 2026
title: Spacer
description: A SwiftUI Spacer component for flexible spacing.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** For cross-platform usage, see the universal [`Spacer`](../universal/spacer) — it renders the appropriate native component per platform.

Expo UI Spacer matches the official SwiftUI [Spacer API](https://developer.apple.com/documentation/swiftui/spacer) and expands to fill available space in a stack.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/spacer/ios-light.webp"
  darkSrc="/static/images/expo-ui/spacer/ios-dark.webp"
  alt="A red A square at the leading edge and a blue B square at the trailing edge of an HStack, separated by a Spacer"
/>

## Installation

<APIInstallSection />

## Usage

### Basic spacer in HStack

Use Spacer to push content to opposite ends of a horizontal stack.

```tsx SpacerHStackExample.tsx
import { Host, HStack, Text, Spacer } from '@expo/ui/swift-ui';

export default function SpacerHStackExample() {
  return (
    <Host style={{ flex: 1 }}>
      <HStack>
        <Text>Left</Text>
        <Spacer />
        <Text>Right</Text>
      </HStack>
    </Host>
  );
}
```

### Basic spacer in VStack

Use Spacer to push content to opposite ends of a vertical stack.

```tsx SpacerVStackExample.tsx
import { Host, VStack, Text, Spacer } from '@expo/ui/swift-ui';

export default function SpacerVStackExample() {
  return (
    <Host style={{ flex: 1 }}>
      <VStack>
        <Text>Top</Text>
        <Spacer />
        <Text>Bottom</Text>
      </VStack>
    </Host>
  );
}
```

## API

```tsx
import { Spacer } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/spacer" apiName="Spacer" />
